--- a/wkhtmltopdf/app/src/templates/pdf_template.html
+++ b/wkhtmltopdf/app/src/templates/pdf_template.html
@@ -7,7 +7,7 @@
 				border-collapse: collapse;
 			}
 			
-			.invoice {
+			.receipt {
 				margin: auto;
 				width: 60%;
 				margin-top: 50px;
@@ -22,9 +22,9 @@
 				size: landscape;
 			}
 		</style>
-		<div class="invoice">
+		<div class="receipt">
 			<p>
-				請求先： ###to###
+				宛名： ###to###
 			</p>
 			<table>
 				<thead>
