--- a/wkhtmltopdf/app/src/templates/index.html
+++ b/wkhtmltopdf/app/src/templates/index.html
@@ -8,16 +8,16 @@
         
         <div class="row center-align">
             <h1 class="col s12">
-                📝請求書発行💰
+                📝領収書発行💰
             </h1>
         </div>
         <div class="row center-align">
-            <form target="_blank"  method="POST" action="/invoice">
+            <form target="_blank" method="POST" action="/receipt">
                 <div class="row">
                     <div class="col s12">
                         <div class="input-field col s5 offset-s3">
-                            <input id="invoice_to"  name="invoice_to" type="text">
-                            <label for="invoice_to">請求先名</label>
+                            <input id="receipt_to" name="receipt_to" type="text">
+                            <label for="receipt_to">宛名</label>
                         </div>
                         <div class="input-field col s1">
                             <input class="btn" type="submit" value="発行" />
